examples/test/testpolicy10933.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10933
  namespace: namespace72
spec:
  podSelector:
    matchLabels:
      key40: value6
      key43: value22
      key37: value9
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key42: value15
      podSelector:
        matchLabels:
          key4: value7
          key3: value22
